--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,13 @@
 :root {
   --font-base: "DM Sans", sans-serif;
 
-  --primary-color: #edf2f8;
-  --secondary-color: #313bac;
-  --black-color: #030303;
-  --lightGray-color: #e4e4e4;
-  --gray-color: #6b7688;
+  --primary-color: #0f0f10;
+  --secondary-color: #039f35;
+  --black-color: #e9e9e9;
+  --lightGray-color: #252424;
+  --gray-color: #039f35;
   --brown-color: #46364a;
-  --white-color: #ffffff;
+  --white-color: #000000;
 }
 
 * {
